bk_ida/gccida/c3/construct_container
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2437:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v16; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2444:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2448:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2455:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2468:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class classes; // [rsp+10h] [rbp-A8h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2471:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v50; // [rsp+34h] [rbp-84h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2476:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v55[18]; // [rsp+70h] [rbp-48h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/i386.c:2507:15: error: use of undeclared identifier 'off_690140'
fprintf( v21, off_690140, x86_64_reg_class_name[v48[i - 1]]); 
              ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/construct_container/src/obj/i386.o] Error 1
